# bsc-git-lecture

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  database.py  hookster  hookster.py  setup.cfg
hookster/: database.py
