[metadata]
# replace with your username:
name = hookster
version = 0.0.1
author = Yash Lala
author_email = yashlala@gmail.com
description = An event-based calendar program.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yashlala/hookster
project_urls =
    Bug Tracker = https://github.com/yashlala/hookster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.8
